docs: 添加seo关键词

--- a/packages/interface-vite/index.html
+++ b/packages/interface-vite/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="" />
+    <meta
+      name="description"
+      content="免费的一个在线图床资源管理工具，支持上传、下载、删除、重命名、批量操作等功能。"
+    />
+    <meta name="keywords" content="图床，免费，批量操作，移动端" />
     <title>图床资源管理</title>
     <link
       rel="icon"
