feat: 对上传接口完善，对刷新列表对接

--- a/packages/interface-web/index.html
+++ b/packages/interface-web/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -9,7 +9,7 @@
       content="免费的一个在线图床资源管理工具，支持上传、下载、删除、重命名、批量操作等功能。"
     />
     <meta name="keywords" content="图床，免费，批量操作，移动端" />
-    <title>图床资源管理</title>
+    <title>敖武的图床-yliu</title>
     <link
       rel="icon"
       type="image/x-icon"
