style: 添加部分黑夜主题适配，对布局和元素颜色微调

--- a/packages/interface-web/index.html
+++ b/packages/interface-web/index.html
@@ -8,12 +8,8 @@
       content="免费的一个在线图床资源管理工具，支持上传、下载、删除、重命名、批量操作等功能。"
     />
     <meta name="keywords" content="图床，免费，批量操作，移动端" />
-    <title>敖武的图床-yliu</title>
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="./src/assets/CatppuccinFolderImagesOpen.svg"
-    />
+    <title>敖武的图床</title>
+    <link rel="icon" type="image/x-icon" href="./src/assets/logo.svg" />
   </head>
   <body>
     <div id="root"></div>
